--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,7 @@ label {
     display: flex;
     align-items: center;
     line-height: 25px;
+    font-size: 12px;
 }
 
 
@@ -537,8 +538,8 @@ p.service-des {
 }
 
 .page-banner-text h1 {
-    font-size: 44px;
-    margin-top: 10px;
+    font-size: 40px;
+    margin-top: 3px;
 }
 
 
@@ -598,6 +599,7 @@ ul.url-list {
     text-align: left;
     padding: 0;
     font-weight: 800;
+    font-size: 16px;
 }
 
 .dropdown-menu {
@@ -671,6 +673,7 @@ ul.filter-menu {
     background: none;
     border: none;
     padding: 0px 15px 8px;
+    position: relative;
 }
 
 .filter-dp-manu:hover .filter-menu {
@@ -1200,7 +1203,7 @@ button.submit-btn:hover {
 
 .page-banner-text p {
     color: #B6DCE1;
-    font-size: 20px;
+    font-size: 14px;
 }
 
 
