--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,3 +1,19 @@
+@media screen and (min-width:1600px) {
+    .banner-img {
+        position: absolute;
+        right: 0;
+        top: 0;
+        z-index: 0;
+        width: 45%;
+        height: 100%;
+    }
+    .banner-content-wrapper {
+        height: 80vh;
+        display: flex;
+        align-items: center;
+    }
+}
+
 @media screen and (max-width:1300px) {
     .dealer-info {
         padding: 0px 60px;
@@ -36,7 +52,7 @@
     ul.mobile-menu {
         display: block;
         position: fixed;
-        z-index: 90;
+        z-index: 89;
         width: 300px;
         right: -115%;
         background: var(--white-color);
@@ -47,7 +63,7 @@
         overflow-y: auto;
         padding: 20px 0;
         transition: .3s;
-        margin-top: 68px;
+        margin-top: 58px;
     }
     a.nav-link {
         padding: 10px 20px;
@@ -119,6 +135,9 @@
         bottom: 0;
         transition: .3s;
         overflow-y: auto;
+    }
+    .filter-area::-webkit-scrollbar {
+        width: 5px;
     }
     .filter-col-5.se-border::before,
     .filter-col-5.se-border::after {
